<resources>
    <string name="app_name">CameraApp</string>
    <string name="button">Capture</string>
    <string name="location">Location:</string>
    <string name="inspec_details_title">Inspection details</string>
    <string name="part_details_title">Part Details</string>
    <string name="engine">Engine:</string>
    <string name="inspector">Inspector:</string>
    <string name="part">Part:</string>
    <string name="date">Date:</string>
    <string name="comments">Comments:</string>
    <string name="backButton">Back</string>
    <string name="submitPartButton">Submit</string>
    <string name="newPartButton">Add new part</string>
    <string name="inspec_album_title">Inspections</string>

    <string name="dialogNewInspection">Would you like to start a new inspection?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="inspection_title">Inspections</string>
    <string name="inspection_list_item_title">Inspection Title</string>
    <string name="inspection_list_item_date">Inspection Date</string>
</resources>
