<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#84a781"
    tools:context=".PartDetails">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:textSize="32sp"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:text="@string/part_details_title"
        android:id="@+id/part_details"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:textSize="30sp"
        android:paddingTop="16dp"
        android:text="@string/part"
        android:id="@+id/part"
        android:layout_below="@+id/part_details"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:textSize="30sp"
        android:paddingTop="16dp"
        android:text="@string/comments"
        android:id="@+id/comments"
        android:layout_below="@+id/part"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/partText"
        android:inputType="textMultiLine"
        android:layout_alignBottom="@+id/part"
        android:layout_toRightOf="@+id/part"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/partCommentsText"
        android:inputType="textMultiLine"
        android:layout_alignBottom="@+id/comments"
        android:layout_toRightOf="@+id/comments"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/backButton"
        android:text="@string/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/part"
        android:layout_toLeftOf="@+id/part_details"
        android:layout_alignRight="@+id/part"
        android:layout_alignEnd="@+id/part" />

    <Button
        android:id="@+id/submitPartButton"
        android:text="@string/submitPartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>

