<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#84a781"
    tools:context=".InspectionDetails">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:textSize="32sp"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:text="@string/inspec_details_title"
        android:id="@+id/inspec_details"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:textSize="30sp"
        android:paddingTop="16dp"
        android:text="@string/location"
        android:id="@+id/location"
        android:layout_below="@+id/inspec_details"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:textSize="30sp"
        android:paddingTop="16dp"
        android:text="@string/date"
        android:id="@+id/mDate"
        android:layout_below="@+id/location"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:textSize="30sp"
        android:paddingTop="16dp"
        android:text="@string/engine"
        android:id="@+id/engine"
        android:layout_below="@+id/mDate"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:textSize="30sp"
        android:paddingTop="16dp"
        android:text="@string/inspector"
        android:id="@+id/inspector"
        android:layout_below="@+id/engine"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:textSize="30sp"
        android:paddingTop="16dp"
        android:text="@string/part"
        android:id="@+id/partMenu"
        android:layout_below="@+id/inspector"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:textSize="30sp"
        android:paddingTop="16dp"
        android:text="@string/comments"
        android:id="@+id/comments"
        android:layout_below="@+id/partMenu"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/locationText"
        android:layout_above="@+id/mDate"
        android:layout_toRightOf="@+id/location"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="textMultiLine"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mDateText"
        android:layout_above="@+id/engine"
        android:layout_below="@+id/location"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/mDate"
        android:layout_toRightOf="@+id/mDate" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/engineText"
        android:layout_above="@+id/inspector"
        android:layout_alignRight="@+id/locationText"
        android:layout_alignEnd="@+id/locationText"
        android:layout_toEndOf="@+id/engine"
        android:layout_toRightOf="@+id/engine"
        android:inputType="textMultiLine" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/inspectorText"
        android:layout_above="@+id/partMenu"
        android:layout_alignRight="@+id/locationText"
        android:layout_alignEnd="@+id/locationText"
        android:layout_toRightOf="@+id/inspector"
        android:layout_toEndOf="@+id/inspector"
        android:inputType="textMultiLine" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/commentsText"
        android:inputType="textMultiLine"
        android:layout_alignBottom="@+id/comments"
        android:layout_alignRight="@+id/inspectorText"
        android:layout_alignEnd="@+id/inspectorText"
        android:layout_toRightOf="@+id/comments"
        android:layout_toEndOf="@+id/comments" />


    <Spinner
        android:id="@+id/partsSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:layout_toRightOf="@+id/partMenu"
        android:layout_toEndOf="@+id/partMenu"
        android:layout_below="@+id/inspector"
        android:layout_above="@+id/commentsText" />

    <Button
        android:id="@+id/backButton"
        android:text="@string/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/location"
        android:layout_toLeftOf="@+id/inspec_details"
        android:layout_toStartOf="@+id/inspec_details" />

    <!--<Button-->
        <!--android:id="@+id/button_newPart"-->
        <!--android:text="@string/newPartButton"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->

        <!--android:layout_above="@+id/submitInspectionButton"-->
        <!--android:layout_toRightOf="@+id/engine"-->
        <!--android:layout_toEndOf="@+id/engine" />-->

    <Button
        android:id="@+id/submitInspectionButton"
        android:text="@string/submitPartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/inspector"
        android:layout_toEndOf="@+id/inspector" />

</RelativeLayout>

